src/objects/New_Data_Asset_Request__c.object
<CustomObject>
    <fields>
        <fullName>Data_Asset_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Asset Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>New Data Asset Requests</relationshipLabel>
        <relationshipName>New_Data_Asset_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <globalPicklist>Data_Types</globalPicklist>
        <label>Data Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Database_Type__c</fullName>
        <globalPicklist>Database_Types</globalPicklist>
        <label>Database Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Legal Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under License Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <globalPicklist>Therapeutic_Area</globalPicklist>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
    </fields>
    <label>New Data Asset Request</label>
    <listViews>
        <fullName>Legal_review_New_Data_Asset_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Review</label>
        <queue>Legal_review</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>License_Reviewer_New_Data_Asset_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>License Reviewer</label>
        <queue>License_Reviewer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Data Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Data Asset Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>